--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -8,9 +8,7 @@
       },
       "source": [
         "# Neural Network for Cancer Prediction\n",
-        "The data used for this tutorial is an RNA-seq gene expression data for different cancer types. The rows represent cancer samples and the columns represent gene count values. The last column contains the cancer categories.\n",
-        "\n",
-        "The original data can found here: https://archive.ics.uci.edu/ml/datasets/gene+expression+cancer+RNA-Seq#"
+        "The data used for this tutorial is an RNA-seq gene expression data for different cancer types. The rows represent cancer samples and the columns represent gene count values. The last column contains the cancer categories.\n"
       ]
     },
     {
