--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -7,8 +7,8 @@
         "id": "b05c990e"
       },
       "source": [
-        "# Neural Network for Cancer Prediction\n",
-        "The data used for this tutorial is an RNA-seq gene expression data for different cancer types. The rows represent cancer samples and the columns represent gene count values. The last column contains the cancer categories.\n"
+        "# Machine learning techniques for cancer prediction\n",
+        "The data used for this project is an RNA-seq gene expression data for different cancer types. The rows represent cancer samples and the columns represent gene count values. The last column contains the cancer categories.\n"
       ]
     },
     {
@@ -88,7 +88,7 @@
       "source": [
         "\n",
         "#read data directly from a github repository\n",
-        "file_url='https://github.com/vappiah/Machine-Learning-Tutorials/raw/main/data/cancer_gene_expression.zip'\n",
+        "file_url='https://github.com/ajulohassankehinde/Machine-learning-for-cancer-prediction-using-RNA-seq-data-/blob/main/cancer_gene_expression.zip'\n",
         "\n",
         "dataframe=pd.read_csv(file_url)\n"
       ]
